#25: Fixed spacing issue from copyright to page bottom.

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -32,6 +32,5 @@
   font-weight: $font-weight-medium;
   letter-spacing: 0.5px;
   line-height: 17px;
-  margin: 0;
   text-align: center;
 }
